optimizations + more functions on encoded strings
Ignore-this: 51c6943cd00d4dbc577870db5022558f

darcs-hash:20090223152706-c41ad-45668e11e04ae4121f2df82c20496ac359a58f2d

--- a/README
+++ b/README
@@ -8,7 +8,8 @@ url: https://forge.ocamlcore.org/projects/encoding/
 * What it is ?
 
 Encoding is a small library which deals with character encodings. It
-allow you to encode/decode/recode from/to any input/output type.
+allow you to encode/decode/recode from/to any input/output type and to
+easily manipulate encoded strings.
 
 Its main goal is to make the usage of character encoding in ocaml
 painless.
