add support for windows
Ignore-this: 18f41d9edd45bdee56df55a0b5bd3c3e

Windows does not have nl_langinfo.

darcs-hash:20090510075255-c41ad-a79021a1a004783fa0b19995809efcbc1b3f27eb

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ OCaml-Text choose to use only regular strings for dealing with text.
 
 * Requirement
 
-OCaml-Text needs only ocaml. It has been written/tested with ocaml 3.11.
+OCaml-Text needs ocaml >= 3.11 and libiconv.
 
 * Building and installation
 
