Text.encode uses transliteration instead of a fallback string
Ignore-this: 6fcb4818db42b4e95eef6fdd6d910b0e

darcs-hash:20100122145808-c41ad-eff73b42b9e03d1a74bef45520033eb810697557

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
     matching
   * Adding a syntax extension for converting human readable regular
     expressions over UTF-8 strings into PCRE ones
+  * Text.encode use transliteration instead of a fallback string
   * Fixing various bugs in the module Text (thanks to unit tests)
   * Adding unit tests
   * Adding support for windows (using GetACP instead of nl_langinfo)
