faster reimplementation of Encoding.recode_string
Ignore-this: 34fde615189a12f7f95b7cc78998e711

darcs-hash:20100122184918-c41ad-227599905c21b2391bc5ca66c4973c43a51ca586

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@
     matching
   * Adding a syntax extension for converting human readable regular
     expressions over UTF-8 strings into PCRE ones
+  * Faster reimplementation of Encoding.recode_string.
+    (note: the ?fallback argument have been removed, use //TRANSLIT instead)
   * Text.encode use transliteration instead of a fallback string
   * Fixing various bugs in the module Text (thanks to unit tests)
   * Adding unit tests
