--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -56,8 +56,8 @@ It also supports encoding (resp. decoding) of unicode text into
 \section{Character encoding}
 
 \oct uses \texttt{libiconv} to transcode between variaous character
-encodings. The \texttt{libiconv} itself is quite painfull to use. \oct
-try to offer a cleaner interface, which is located in the module
+encodings. The \texttt{libiconv} itself is quite painfull to use, \oct
+tries to offer a cleaner interface, which is located in the module
 \texttt{Encoding}.
 
 \subsection{Decoding}
@@ -71,7 +71,7 @@ val decoder : Encoding.t -> Encoding.decoder
 \end{verbatim}
 
 The type \texttt{Encoding.t} is the type of character encoding. It is
-defined as an alias to the type string. In fact it is simply the name
+defined as an alias to the type string; in fact it is simply the name
 of the character encoding, such as \texttt{``UTF-8''},
 \texttt{``ASCII''}, ...
 
@@ -115,14 +115,14 @@ then, encoding is done by:
 val encode : encoder -> string -> int -> int -> code_point -> encoding_result
 \end{verbatim}
 
-Arguments have the same leaning that for decoding, exception that the
+Arguments have the same meaning that for decoding, except that the
 buffer will be written insteand of read. \texttt{encode} will write
 into the buffer the multi-byte sequence correspoing to the given
 code-point. On success it returns \texttt{Enc\_ok num} where
 \texttt{num} is the number of bytes written. If the unicode character
 cannot be represented in the given encoding, it returns
-\texttt{Enc\_error}. If the buffer does not contain room for the
-multi-byte seuqnece, it returns \texttt{Enc\_need\_more}..
+\texttt{Enc\_error}. If the buffer does not contain enough room for
+the multi-byte seuqnece, it returns \texttt{Enc\_need\_more}..
 
 \subsection{The system encoding}
 
@@ -265,7 +265,7 @@ let search txt =
 \end{verbatim}
 
 Each call to \texttt{Text.next} returns either \texttt{None} if the
-end of the text have been reached, or \texttt{Some(ch, pointer)} when:
+end of the text have been reached, or \texttt{Some(ch, pointer)} where:
 
 \begin{itemize}
 \item \texttt{ch} is the character pointed by the pointer
@@ -360,9 +360,9 @@ latin-1 character ``é''.
 \subsection{Quotations}
 
 The syntax extension defines two camlp4 quotations, that might be used
-in expressions or in patterns. The first one is ``\texttt{re\_text}'' which
-takes a regular expression as defined before and convert it to a
-string, following the syntax of PCRE.
+in expressions or in patterns. The first one is
+``\texttt{re\_text}''. It takes a regular expression as defined before
+and convert it to a string, following the syntax of PCRE.
 
 For example:
 
@@ -466,7 +466,7 @@ expression. Available modes are:
 \subsection{Greedy vs possessive vs lazy}
 
 The post-operators $?$, $+$, $*$, and more generally $\{...\}$ may be
-suffixed with onoe of $?$ or $+$ to modify their behaviour. By default
+suffixed with one of $?$ or $+$ to modify their behaviour. By default
 regular expressions are greedy, which means that they match the
 maximum possible they can. Suffixing them with $?$ will make them
 lazy, which means the contrary.
@@ -499,6 +499,21 @@ we got:
 \begin{verbatim}
 $ f "aaa";;
 - : Text.t option = Some ""
+\end{verbatim}
+
+Possessive prevents backtracking. For example, with:
+
+\begin{verbatim}
+let f = function
+  | <:re< ("a"* as x) ("a" as y) >> -> Some(x, y)
+  | _ -> None
+\end{verbatim}
+
+we got:
+
+\begin{verbatim}
+$ f "aaa";;
+- : Text.t option = None
 \end{verbatim}
 
 \end{document}
