switch to OASIS
Ignore-this: 1ee656fb85e82e3964ac2d345d1ab22e

darcs-hash:20100906093045-c41ad-33b49f1af2a5967a8aa8434a2224fec8d2c8892d

--- a/README
+++ b/README
@@ -29,8 +29,9 @@ bindings for ocaml to have regular expression support.
 
 To build and install it just type:
 
-  $ make all
-  $ make install
+  $ ocaml setup.ml -configure
+  $ ocaml setup.ml -build
+  $ ocaml setup.ml -install
 
 This will install the "text" package (ocamlfind is required), and the
 "text.pcre" if compiled with support for pcre.
