add darcs info to _oasis
Ignore-this: c2651d4ec02fe513254da72eca60a3b5

darcs-hash:20101023000834-c41ad-f69a4836bf17c6f34411d50b62c31658cbfa8630

--- a/README
+++ b/README
@@ -41,7 +41,7 @@ This will install the "text" package (ocamlfind is required), and the
 The last development version of ocaml-text can always be found in the
 darcs repository hosted at darcs.ocamlcore.org:
 
-  $ darcs get http://darcs.ocamlcore.org/repos/ocaml-text/ocaml-text
+  $ darcs get http://darcs.ocamlcore.org/repos/ocaml-text
 
 local variables:
 mode: outline
