--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+===== 0.4 =====
+
+  * Fix a bug in regular expression generation for PCRE
+  * Adding the function Text.transform
+  * Adding the module Encoding_bigarray for encoding/decoding
+    to/from bigarrays instead of strings
+  * Automatically detect whether -liconv is needed or not
+
 ===== 0.3 =====
 
   * Adding a user manual
