remove oasis generated files
Ignore-this: f2e4d8dc7c49d4ee5f8e7d8ae403bbed

darcs-hash:20110702211921-c41ad-d30f8bc26b414901f1275aab0fe7c62eab7089cf

--- a/README
+++ b/README
@@ -36,6 +36,9 @@ To build and install it just type:
 This will install the "text" package (ocamlfind is required), and the
 "text.pcre" if compiled with support for pcre.
 
+If you get the development version you must obtain oasis
+(http://oasis.forge.ocamlcore.org/).
+
 * Development
 
 The last development version of ocaml-text can always be found in the
