--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+===== 0.5 =====
+
+  * use more search pathes for iconv
+  * fix a bug in Encoding.recode_string
+  * several optimizations for the Text module
+
 ===== 0.4 =====
 
   * Fix a bug in regular expression generation for PCRE
